--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ function done()
 {
     if(main_ret == 0 || main_ret == 179)
     {
-       alert("\n \n P R O N T O ! Host carregado no guia e navegador, desligue a internet.\n \n A T E N Ç Ã O ! ! ! Aguarde as mensagens.\n  Depois fique pressionando o botão \"CIRCULO\" (VERMELHO) até sair do navegador.");
+       alert("\n \n P R O N T O ! Host carregado no guia e navegador.\n \n A T E N Ç Ã O ! ! ! Aguarde as mensagens.\n  Depois fique pressionando o botão \"CIRCULO\" (VERMELHO) até sair do navegador.\nJá pode desativar a internet do console.");
        read_ptr_at(0);
     }
     else
